CHROMIUM: drm/i915: reset psr.setup_done in disable_ddi instead of crtc_enable

haswell_crtc_enable() is not a good place to reset psr.setup_done because
connecting 2nd monitor will trigger haswell_crtc_enable() for another crtc and
prevent intel_edp_psr_update() from working at all. PSR state is really associated
with EDP link, not with CRTC.

BUG=chromium:628385
TEST=switch to VT2 with external monitor connected

Change-Id: Iabddd2d936d48e969a2ab7ec500187ac3e1a6072
Signed-off-by: Dominik Behr <dbehr@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/386158
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>